fix packge name

--- a/docker/Dockerfile.indi_base_ubuntu2404
+++ b/docker/Dockerfile.indi_base_ubuntu2404
@@ -20,7 +20,7 @@ RUN apt-get -y install \
     locales \
     tzdata \
     procps \
-    netcat \
+    netcat-traditional \
     sudo \
     git \
     jq \
