--- a/docker/Dockerfile.indiserver_ubuntu2404
+++ b/docker/Dockerfile.indiserver_ubuntu2404
@@ -7,7 +7,6 @@ RUN apt-get update
 RUN apt-get -y upgrade
 
 RUN apt-get -y install \
-    gsc \
     indi-full \
     libindi-dev \
     indi-webcam \
@@ -30,6 +29,10 @@ RUN apt-get -y install \
     indi-dsi \
     indi-gpsd \
     indi-gpsnmea
+
+
+    # Unnecessary
+    #gsc \
 
 
 # cleanup
