new indi build settings for dockerfiles

--- a/docker/Dockerfile.indi_base_debian12
+++ b/docker/Dockerfile.indi_base_debian12
@@ -39,6 +39,7 @@ USER allsky
 WORKDIR /home/allsky
 
 
+ENV BUILD_INDI_SETTINGS=manual
 ENV BUILD_INDI_CORE=true
 ENV BUILD_INDI_3RDPARTY=false
 ENV BUILD_INDI_OS_PACKAGE_UPGRADE=false
