--- a/docker/Dockerfile.indiserver_debian12
+++ b/docker/Dockerfile.indiserver_debian12
@@ -28,6 +28,7 @@ USER allsky
 WORKDIR /home/allsky
 
 
+ENV BUILD_INDI_SETTINGS=manual
 ENV BUILD_INDI_CORE=false
 ENV BUILD_INDI_3RDPARTY=true
 ENV BUILD_INDI_CAMERA_VENDOR=$INDI_CAMERA_VENDOR
