add i2c-tools to dockerfile

--- a/docker/Dockerfile.indi_base_ubuntu2404
+++ b/docker/Dockerfile.indi_base_ubuntu2404
@@ -15,6 +15,7 @@ RUN apt-get -y install \
     build-essential \
     apt-utils \
     iproute2 \
+    i2c-tools \
     locales \
     tzdata \
     procps \
