--- a/docker/Dockerfile.indi_base_debian12
+++ b/docker/Dockerfile.indi_base_debian12
@@ -14,6 +14,7 @@ RUN export DEBIAN_FRONTEND=noninteractive \
         build-essential \
         iproute2 \
         apt-utils \
+        i2c-tools \
         locales \
         tzdata \
         procps \
