Fix typo in apache_indi_allsky.conf

--- a/service/apache_indi-allsky.conf
+++ b/service/apache_indi-allsky.conf
@@ -83,7 +83,7 @@ Listen [::]:%HTTP_PORT%
     RewriteEngine On
 
     ### Comment this section to permit HTTP access to indi-allsky
-    ###  SESSION_COOKIE_SECURE will have to be set to "false" in flash config
+    ###  SESSION_COOKIE_SECURE will have to be set to "false" in flask config
     RewriteCond "%{HTTPS}" off
     RewriteCond %{REQUEST_URI} !^/\.well\-known
     RewriteRule "^/(.*)" "https://%{SERVER_NAME}:%HTTPS_PORT%/$1" [R=302,L]
