Fix typo in nginx_indi-allsky.conf

--- a/service/nginx_indi-allsky.conf
+++ b/service/nginx_indi-allsky.conf
@@ -101,7 +101,7 @@ server {
     }
 
     ### Comment this section to permit HTTP access to indi-allsky
-    ###  SESSION_COOKIE_SECURE will have to be set to "false" in flash config
+    ###  SESSION_COOKIE_SECURE will have to be set to "false" in flask config
     location / {
         return 302 https://$host:%HTTPS_PORT%$request_uri;
     }
