add simplejpeg to web requirements

--- a/requirements/requirements_latest_web.txt
+++ b/requirements/requirements_latest_web.txt
@@ -12,6 +12,7 @@ ccdproc >= 2.4.2
 scikit-image >= 0.25.0
 # https://www.wheelodex.org/projects/Pillow/
 Pillow
+simplejpeg
 bottleneck >= 1.4.0
 ephem
 skyfield
