add simplejpeg to requirements

--- a/requirements/requirements_debian10.txt
+++ b/requirements/requirements_debian10.txt
@@ -37,6 +37,7 @@ Pillow
 piexif
 imageio
 imageio-ffmpeg
+simplejpeg
 # https://www.piwheels.org/project/imagecodecs/
 #imagecodecs
 #rawpy  # not needed
