--- a/requirements/requirements_debian11_web.txt
+++ b/requirements/requirements_debian11_web.txt
@@ -9,7 +9,8 @@ ccdproc
 scikit-image <= 0.19.3
 # https://www.wheelodex.org/projects/Pillow/
 Pillow
-simplejpeg
+simplejpeg ; platform_machine == 'x86_64' or 'aarch64' in platform_machine
+simplejpeg <= 1.7.2 ; 'arm' in platform_machine
 bottleneck
 ephem
 skyfield
