--- a/requirements/requirements_gpio.txt
+++ b/requirements/requirements_gpio.txt
@@ -30,6 +30,7 @@ adafruit-circuitpython-ina219
 adafruit-circuitpython-ina23x
 adafruit-circuitpython-pca9685
 adafruit-circuitpython-motorkit
+sparkfun-circuitpython-qwiicas3935
 sparkfun-qwiic-mmc5983ma
 
 ### does not work on raspi
