--- a/service/indi-allsky-disable-leds.service
+++ b/service/indi-allsky-disable-leds.service
@@ -4,6 +4,8 @@ After=network.target
  
 [Service]
 ExecStart=/usr/local/sbin/indi-allsky-disable-leds.sh
+RemainAfterExit=true
+Type=oneshot
 
 [Install]
 WantedBy=default.target
