update default timezone in containers

--- a/docker/Dockerfile.gunicorn
+++ b/docker/Dockerfile.gunicorn
@@ -20,6 +20,12 @@ RUN apt-get update \
       virtualenv \
     && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
+
+# update timezone
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+RUN dpkg-reconfigure -f noninteractive tzdata
+
+
 RUN groupadd --gid 10001 allsky \
     && useradd --create-home --no-user-group --uid 10001 --gid allsky --home-dir /home/allsky --shell /bin/bash allsky
 
