--- a/docker/Dockerfile.indi_base_debian12
+++ b/docker/Dockerfile.indi_base_debian12
@@ -23,6 +23,12 @@ RUN export DEBIAN_FRONTEND=noninteractive \
         jq \
     && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
+
+# update timezone
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+RUN dpkg-reconfigure -f noninteractive tzdata
+
+
 # need the uid and gid to match in all containers
 RUN groupadd --gid 10001 allsky
 RUN useradd --create-home --no-user-group --uid 10001 --gid allsky --groups dialout,video --home-dir /home/allsky --shell /bin/bash allsky
@@ -47,6 +53,7 @@ ENV BUILD_INDI_OS_PACKAGE_UPGRADE=false
 RUN bash build_indi.sh $INDI_VERSION \
     && rm -fR /home/allsky/Projects \
     && sudo apt-get clean && sudo rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
 
 ### libcamera build is prone to failure
 #RUN ./build_libcamera.sh $LIBCAMERA_TAG $RPICAM_APPS_TAG
