--- a/docker/Dockerfile.indi_base_ubuntu2404
+++ b/docker/Dockerfile.indi_base_ubuntu2404
@@ -36,6 +36,7 @@ RUN apt-get -y install \
 RUN apt-get clean
 
 
+# update timezone
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 RUN dpkg-reconfigure -f noninteractive tzdata
 
