--- a/requirements/requirements_gpio.txt
+++ b/requirements/requirements_gpio.txt
@@ -32,6 +32,7 @@ adafruit-circuitpython-pca9685
 adafruit-circuitpython-motorkit
 sparkfun-circuitpython-qwiicas3935
 sparkfun-qwiic-mmc5983ma
+git+https://github.com/aaronwmorris/CircuitPython_MLX90615.git
 
 ### does not work on raspi
 #adafruit-circuitpython-ds18x20
