--- a/docker/Dockerfile.indiserver_debian12
+++ b/docker/Dockerfile.indiserver_debian12
@@ -1,6 +1,6 @@
 FROM indi.base
 
-ARG INDI_VERSION
+ARG INDI_3RDPARTY_VERSION
 ARG INDI_CAMERA_VENDOR
 ARG DEBIAN_FRONTEND=noninteractive
 
@@ -33,7 +33,7 @@ ENV BUILD_INDI_CORE=false
 ENV BUILD_INDI_3RDPARTY=true
 ENV BUILD_INDI_CAMERA_VENDOR=$INDI_CAMERA_VENDOR
 ENV BUILD_INDI_OS_PACKAGE_UPGRADE=false
-RUN bash build_indi.sh $INDI_VERSION \
+RUN bash build_indi.sh null $INDI_3RDPARTY_VERSION \
     && rm -fR /home/allsky/Projects \
     && sudo apt-get clean && sudo rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
