--- a/docker/Dockerfile.indi_base_debian12
+++ b/docker/Dockerfile.indi_base_debian12
@@ -51,7 +51,7 @@ ENV BUILD_INDI_SETTINGS=manual
 ENV BUILD_INDI_CORE=true
 ENV BUILD_INDI_3RDPARTY=false
 ENV BUILD_INDI_OS_PACKAGE_UPGRADE=false
-RUN bash build_indi.sh $INDI_CORE_VERSION \
+RUN bash build_indi.sh $INDI_CORE_VERSION null \
     && rm -fR /home/allsky/Projects \
     && sudo apt-get clean && sudo rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
