--- a/requirements/requirements_gpio.txt
+++ b/requirements/requirements_gpio.txt
@@ -29,6 +29,7 @@ adafruit-circuitpython-bmp3xx
 adafruit-circuitpython-ina3221
 adafruit-circuitpython-ina219
 adafruit-circuitpython-ina23x
+adafruit-circuitpython-ina260
 adafruit-circuitpython-pca9685
 adafruit-circuitpython-motorkit
 sparkfun-circuitpython-qwiicas3935
