increase proxy timeout for long running requests

--- a/service/nginx_indi-allsky.conf
+++ b/service/nginx_indi-allsky.conf
@@ -69,6 +69,7 @@ server {
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header Host $http_host;
       proxy_redirect off;
+      proxy_read_timeout 600s;
       proxy_pass http://indi_allsky_server;
     }
 
