add warnings in views when docker is used

--- a/service/indi-allsky.env
+++ b/service/indi-allsky.env
@@ -1,3 +1,5 @@
+# shellcheck disable=SC2034
+
 ### Override temporary directory
 #TMPDIR=/path/to/tmp
 
@@ -6,3 +8,6 @@
 ### or
 #LC_TIME=fr_FR.UTF-8
 #LC_NUMERIC=fr_FR.UTF-8
+
+### Testing
+#INDIALLSKY_DOCKER=1
