--- a/requirements/requirements_latest_armv6l.txt
+++ b/requirements/requirements_latest_armv6l.txt
@@ -25,7 +25,7 @@ Pillow
 piexif
 imageio
 imageio-ffmpeg
-simplejpeg
+simplejpeg <= 1.7.2
 # https://www.piwheels.org/project/imagecodecs/
 #imagecodecs
 cython
