add ICM20x IMU sensor support

--- a/requirements/requirements_gpio.txt
+++ b/requirements/requirements_gpio.txt
@@ -33,6 +33,7 @@ adafruit-circuitpython-ina260
 adafruit-circuitpython-pca9685
 adafruit-circuitpython-motorkit
 sparkfun-circuitpython-qwiicas3935
+adafruit-circuitpython-icm20x
 sparkfun-qwiic-mmc5983ma
 git+https://github.com/aaronwmorris/CircuitPython_MLX90615.git@ab15707
 
